// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Lists/ListItem Single-line item with Avatar and controls: Components/Lists/ListItem Single-line item with Avatar and controls 1`] = `
.c6.custom-root {
  padding: 0px;
  width: 36px;
  height: 20px;
}

.c6.c6 .custom-switchBase {
  width: 36px;
  height: 20px;
  -webkit-transform: translateX(-8px);
  -ms-transform: translateX(-8px);
  transform: translateX(-8px);
  padding: 0;
}

.c6.c6 .custom-switchBase:hover {
  background: none;
}

.c6:hover .custom-bar {
  opacity: 0.88 !important;
}

.c6:active .custom-bar {
  opacity: 0.76 !important;
}

.c6 .custom-bar {
  opacity: 1;
  background: #bfbfbf;
  border-radius: 10px;
  height: 20px;
  margin: 0;
}

.c6.c6 .custom-icon {
  width: 12px;
  height: 12px;
  box-shadow: none;
}

.c6 .custom-disabled .custom-icon {
  background: #fff;
}

.c6.c6 .custom-checked {
  -webkit-transform: translateX(8px);
  -ms-transform: translateX(8px);
  transform: translateX(8px);
}

.c6.c6 .custom-checked .custom-icon {
  background: #fff;
}

.c6.c6 .custom-checked + .custom-bar {
  opacity: 1;
}

.c6 .custom-disabled.custom-checked + .custom-bar {
  opacity: 1;
  background: #b2e3f4;
}

.c6 input {
  -webkit-transform: translateX(8px);
  -ms-transform: translateX(8px);
  transform: translateX(8px);
}

.c0.c0 {
  padding: 8px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 16px;
  color: #000;
}

.c0.c0.Mui-focusVisible {
  background-color: rgba(0,0,0,0.1);
}

.c0.c0:hover {
  background-color: rgba(0,0,0,0.05);
}

.c0.c0 .rippleVisible {
  background-color: rgba(0,0,0,0.05);
}

.c1.c1 {
  margin-right: 8px;
  min-width: 0;
}

.c5.c5 {
  margin: 0px 8px;
}

.c5.c5 a,
.c5.c5 button {
  margin-right: 0;
}

.c4.c4 {
  padding: 0;
}

.c4.c4 .list-item-primary {
  display: block;
  color: #212121;
  font-size: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c4.c4 .list-item-secondary {
  display: block;
  color: #757575;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c4.c4.multiline {
  margin: 0;
}

.c3.c3 {
  width: 24px;
  height: 24px;
  font-size: 0.75rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  background-color: #18a4de;
}

.c3.c3:hover {
  opacity: 0.88;
  cursor: pointer;
}

.c3.c3:active {
  opacity: 0.76;
}

.c3:focus {
  outline: none;
}

.c3 > .avatar-short-name {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 .c2:hover,
.c7 .c2:active {
  cursor: default;
  opacity: 1;
}

<ul
  className="MuiList-root MuiList-padding"
>
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "cursor": "default",
      }
    }
    tabIndex={0}
  >
    <div
      className="MuiListItemAvatar-root c1"
    >
      <div
        className="MuiAvatar-root c2 c3"
        size="small"
      >
        <img
          className="MuiAvatar-img"
          src="test-file-stub"
        />
      </div>
    </div>
    <div
      className="MuiListItemText-root c4"
      flex="1 1 auto"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
      >
        Single-line item name
      </span>
    </div>
    <div
      className="c5"
    >
      <span
        className="MuiSwitch-root custom-root c6"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-105 MuiSwitch-switchBase custom-switchBase MuiSwitch-colorPrimary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="MuiSwitch-thumb custom-icon"
            />
            <input
              className="PrivateSwitchBase-input-108 MuiSwitch-input"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track custom-bar"
        />
      </span>
    </div>
  </div>
</ul>
`;

exports[`Storyshots Components/Lists/ListItem Single-line item with icon: Components/Lists/ListItem Single-line item with icon 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c2.c2 {
  padding: 0;
  width: 20px;
  height: 20px;
  color: #9e9e9e;
  opacity: 1;
  padding: 0;
  background-color: inherit;
  border-radius: 0;
}

.c2.c2 .icon,
.c2.c2 .icon svg {
  font-size: 20px;
}

.c2.c2:hover {
  background-color: transparent;
}

.c2.c2:hover .icon {
  color: rgba(158,158,158,0.88);
}

.c2.c2:active .icon {
  color: #9e9e9e;
}

.c2.c2.c2.c2.disabled {
  background-color: inherit;
}

.c2.c2.c2.c2.disabled .icon {
  color: rgba(0,0,0,0.12);
}

.c2.c2 .rippleVisible {
  color: #9e9e9e;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c0.c0 {
  padding: 8px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 16px;
  color: #000;
}

.c0.c0.Mui-focusVisible {
  background-color: rgba(0,0,0,0.1);
}

.c0.c0:hover {
  background-color: rgba(0,0,0,0.05);
}

.c0.c0 .rippleVisible {
  background-color: rgba(0,0,0,0.05);
}

.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 36px;
  height: 36px;
  margin-right: 8px;
  background-color: #f5f6fb;
  border-radius: 4px;
  overflow: hidden;
  min-width: unset;
}

.c5.c5 {
  padding: 0;
}

.c5.c5 .list-item-primary {
  display: block;
  color: #212121;
  font-size: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c5.c5 .list-item-secondary {
  display: block;
  color: #757575;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c5.c5.multiline {
  margin: 0;
}

<ul
  className="MuiList-root MuiList-padding"
>
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "cursor": "default",
      }
    }
    tabIndex={0}
  >
    <div
      className="MuiListItemIcon-root c1"
    >
      <button
        aria-label="favorite"
        className="MuiButtonBase-root MuiIconButton-root c2"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        variant="plain"
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            className="  icon c3"
          >
            <svg
              className="c4"
              role="img"
            >
              <use
                href="#undefined"
                xlinkHref="#undefined"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      className="MuiListItemText-root c5"
      flex="1 1 auto"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
      >
        Single-line item name
      </span>
    </div>
  </div>
</ul>
`;

exports[`Storyshots Components/Lists/ListItem Two-line item: Components/Lists/ListItem Two-line item 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 36px;
}

.c6.c6 {
  padding: 0;
  width: 20px;
  height: 20px;
  color: #9e9e9e;
  opacity: 1;
  padding: 0;
  background-color: inherit;
  border-radius: 0;
}

.c6.c6 .icon,
.c6.c6 .icon svg {
  font-size: 20px;
}

.c6.c6:hover {
  background-color: transparent;
}

.c6.c6:hover .icon {
  color: rgba(158,158,158,0.88);
}

.c6.c6:active .icon {
  color: #9e9e9e;
}

.c6.c6.c6.c6.disabled {
  background-color: inherit;
}

.c6.c6.c6.c6.disabled .icon {
  color: rgba(0,0,0,0.12);
}

.c6.c6 .rippleVisible {
  color: #9e9e9e;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c0.c0 {
  padding: 8px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  color: #000;
}

.c0.c0.Mui-focusVisible {
  background-color: rgba(0,0,0,0.1);
}

.c0.c0:hover {
  background-color: rgba(0,0,0,0.05);
}

.c0.c0 .rippleVisible {
  background-color: rgba(0,0,0,0.05);
}

.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 36px;
  height: 36px;
  margin-right: 8px;
  background-color: #f5f6fb;
  border-radius: 4px;
  overflow: hidden;
  min-width: unset;
}

.c5.c5 {
  margin: 0px 8px;
}

.c5.c5 a,
.c5.c5 button {
  margin-right: 0;
}

.c4.c4 {
  padding: 0;
}

.c4.c4 .list-item-primary {
  display: block;
  color: #212121;
  font-size: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c4.c4 .list-item-secondary {
  display: block;
  color: #757575;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c4.c4.multiline {
  margin: 0;
}

<ul
  className="MuiList-root MuiList-padding"
>
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "cursor": "default",
      }
    }
    tabIndex={0}
  >
    <div
      className="MuiListItemIcon-root c1"
    >
      <span
        className=" pdf icon c2"
        data-test-automation-id="iconThumbnail"
      >
        <svg
          className="c3"
          role="img"
          size="extraLarge"
        >
          <use
            href="#icon-pdf"
            xlinkHref="#icon-pdf"
          />
        </svg>
      </span>
    </div>
    <div
      className="MuiListItemText-root c4 MuiListItemText-multiline multiline"
      flex="1 1 auto"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
      >
        Two-line item name
      </span>
      <p
        className="MuiTypography-root MuiListItemText-secondary list-item-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
      >
        <span>
          <span>
            Secondary text
          </span>
          <span>
             · 
            XX/XX/XXXX
          </span>
        </span>
      </p>
    </div>
    <div
      className="c5"
    >
      <button
        aria-label=""
        className="MuiButtonBase-root MuiIconButton-root c6"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        variant="plain"
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            className="  icon c2"
          >
            <svg
              className="c7"
              role="img"
            >
              <use
                href="#undefined"
                xlinkHref="#undefined"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</ul>
`;

exports[`Storyshots Components/Lists/ListItem list item: Components/Lists/ListItem list item 1`] = `
.c0 {
  height: 100%;
  max-height: 100%;
  min-height: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2.c2 {
  padding: 8px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 16px;
  color: #000;
}

.c2.c2.Mui-focusVisible {
  background-color: rgba(0,0,0,0.1);
}

.c2.c2:hover {
  background-color: rgba(0,0,0,0.05);
}

.c2.c2 .rippleVisible {
  background-color: rgba(0,0,0,0.05);
}

.c1 {
  height: 8px;
}

<div
  className="c0"
>
  <div
    data-test-automation-id="virtualized-list"
    onKeyDown={[Function]}
    onScroll={[Function]}
    style={
      Object {
        "WebkitOverflowScrolling": "touch",
        "height": "100%",
        "maxHeight": "100%",
        "minHeight": "inherit",
        "overflow": "auto",
        "overflowAnchor": "none",
        "transform": "translateZ(0)",
      }
    }
    tabIndex={-1}
  >
    <div>
      <div
        className="c1"
      />
    </div>
    <div
      style={
        Object {
          "height": 0,
        }
      }
    />
    <div>
      <div
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root c2 MuiListItem-gutters MuiListItem-button"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
          }
        }
        tabIndex={0}
      >
        list item
      </div>
      <div
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root c2 MuiListItem-gutters MuiListItem-button"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
          }
        }
        tabIndex={0}
      >
        list item
      </div>
      <div
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root c2 MuiListItem-gutters MuiListItem-button"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
          }
        }
        tabIndex={0}
      >
        list item
      </div>
      <div
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root c2 MuiListItem-gutters MuiListItem-button"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
          }
        }
        tabIndex={0}
      >
        list item
      </div>
      <div
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root c2 MuiListItem-gutters MuiListItem-button"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
          }
        }
        tabIndex={0}
      >
        list item
      </div>
      <div
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root c2 MuiListItem-gutters MuiListItem-button"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
          }
        }
        tabIndex={0}
      >
        list item
      </div>
      <div
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root c2 MuiListItem-gutters MuiListItem-button"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
          }
        }
        tabIndex={0}
      >
        list item
      </div>
      <div
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root c2 MuiListItem-gutters MuiListItem-button"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
          }
        }
        tabIndex={0}
      >
        list item
      </div>
      <div
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root c2 MuiListItem-gutters MuiListItem-button"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
          }
        }
        tabIndex={0}
      >
        list item
      </div>
      <div
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root c2 MuiListItem-gutters MuiListItem-button"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
          }
        }
        tabIndex={0}
      >
        list item
      </div>
    </div>
    <div
      style={
        Object {
          "height": 0,
        }
      }
    />
    <div
      className="c1"
    />
  </div>
</div>
`;
